fixed the horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,11 @@
 
 html {
 	scroll-behavior: smooth;
-	width: 99%;
 }
 
 body {
 	background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898; 
- background-blend-mode: multiply,multiply;
+	background-blend-mode: multiply,multiply;
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -25,6 +24,7 @@ nav {
 	border-bottom: 2px solid #fff;
 	position: fixed;
 	top: 0;
+	left: 0;
 	width: 100%;
 	background-color: #6a6a6a;
 }
@@ -39,6 +39,10 @@ nav li:not(:first-child) {
 
 nav li {
 	display: inline;
+}
+
+.row {
+	margin-right: 0;
 }
 
 #home {
